tests/pact/bad/bad-term-in-list.repl
[(module m g (defcap g () 1))]
